# platform.core.multimedia.libmm-streamrecorder

./: AUTHORS  Makefile.am  autogen.sh  configure.ac  libmm-streamrecorder.manifest  mm-streamrecorder.pc.in
packaging/: libmm-streamrecorder.spec
src/: Makefile.am  mm_streamrecorder.c  mm_streamrecorder_attribute.c  mm_streamrecorder_audio.c  mm_streamrecorder_buffer_manager.c  mm_streamrecorder_fileinfo.c  mm_streamrecorder_gstcommon.c  mm_streamrecorder_gstdispatch.c  mm_streamrecorder_ini.c  mm_streamrecorder_internal.c  mm_streamrecorder_recorder.c  mm_streamrecorder_util.c  mm_streamrecorder_video.c
src/include/: mm_streamrecorder.h  mm_streamrecorder_attribute.h  mm_streamrecorder_audio.h  mm_streamrecorder_buffer_manager.h  mm_streamrecorder_fileinfo.h  mm_streamrecorder_gstcommon.h  mm_streamrecorder_gstdispatch.h  mm_streamrecorder_ini.h  mm_streamrecorder_internal.h  mm_streamrecorder_recorder.h  mm_streamrecorder_util.h  mm_streamrecorder_video.h
test/: Makefile.am  mm_streamrecorder_testsuite.c
